# stable-audio-3

./: .gitignore  README.md  README_VARIATIONS.md  pyproject.toml  sa3_pipeline.py  sa3_studio.py  sa3_variations.py
cpp_spike/: CMakeLists.txt  convert_npz.py  dit.cpp  dit.h  sa3_pipeline.cpp  samel_decoder.h  t5gemma.cpp  test_sa3_pipeline.cpp  test_samel_decoder.cpp  verify.py  verify_dit.py  verify_sa3_pipeline.py  verify_samel_decoder.py  verify_samel_encoder.py  verify_t5gemma.py  verify_t5gemma_encode.py
docs/guides/: model-overview.md
docs/workflows/: inference.md  lora.md
optimized/cpp/: CMakeLists.txt  convert_npz.py  dit.cpp  main.cpp  sa3_cli.cpp  sa3_orchestrator.cpp  sa3_orchestrator.h  sa3_pipeline.cpp  sa3_pipeline.h  samel_common.cpp  samel_common.h  samel_decoder.cpp  samel_encoder.cpp  samel_encoder.h  t5gemma.h  test_dit.cpp  test_samel_encoder.cpp  test_t5gemma.cpp  test_t5gemma_encode.cpp  verify.py  verify_dit.py  verify_sa3_pipeline.py  verify_samel_decoder.py  verify_samel_encoder.py  verify_t5gemma.py  verify_t5gemma_encode.py
optimized/mlx/: README.md  bootstrap.sh  install.sh
optimized/mlx/models/defs/: sa3_pipeline.py
plugin/: .env.example  CMakeLists.txt  RELEASE.md  entitlements.plist
plugin/Resources/: app.js  index.html  styles.css
plugin/Source/: MacClipboard.h  MacClipboard.mm  PipelineLoader.cpp  PipelineLoader.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  VariationsEngine.cpp  VariationsEngine.h
plugin/cmake/: vendor_bundle.sh
plugin/scripts/: build_release.sh  install_models.sh  notarize.sh  prepare_release_assets.sh
realtime/bench/: phase0_euler_ab.py  phase0_tick.py  phase1_parity.py  phase2_curves.py  phase2b_morph.py  phase2c_cfg.py
realtime/engine/: __init__.py  ode_steps.py  stream.py
scripts/: pre_encode_dataset.py
stable_audio_3/: cli.py  factory.py  model.py
stable_audio_3/interface/: diffusion_cond.py
tests/: test_cli.py
web/: DESIGN_BRIEF.md  README.md  server.py
web/static/: index.html
web/static/css/: styles.css
web/static/js/: app.js  demucs.js
